--- a/Implementation/ImplOverview.tex
+++ b/Implementation/ImplOverview.tex
@@ -16,7 +16,7 @@ Most of the algorithms and methods discussed in this thesis have been implemente
     \item[PDDL parser and serializer]
         In order to communicate with external planners, a PDDL parser and serializer is provided. This also enables learning arbitrary partially known domains, given that they (as well as a sequence of problems) are provided as text files written in the PDDL language (see~\cite{PDDL} for a specification).
     \item[Sokoban environment]
-        The sokoban environment is provided as a ready-made world for the agent to act in. This implementation is based on the actions in Section~\ref{sec:SokobanPDDL}, i.e.\ it only supports non-conditional actions. When this environment is used, and the program is run in the console, a visual representation of the state of the world is displayed after each experiment.
+        The sokoban environment is provided as a ready-made world for the agent to act in. This implementation is based on the actions in \Cref{sec:SokobanPDDL}, i.e.\ it only supports non-conditional actions. When this environment is used, and the program is run in the console, a visual representation of the state of the world is displayed after each experiment.
 \end{description}
 
 While several of the algorithms and methods from Chapter~\ref{chp:ca} have been implemented in the program, hyper graph collapsing and conditional hypothesis construction have not, which is why the implemented program can not learn conditional action schemas.
