--- a/Master.tex
+++ b/Master.tex
@@ -135,7 +135,7 @@
 \newcommand{\glits}{\ensuremath{\mathbb{G}}\xspace} 
 
 % Symbol for a conditional
-\newcommand{\cond}{\ensuremath{E^C}\xspace}
+\newcommand{\cond}{\ensuremath{E_C}\xspace}
 
 % symbol for Undefined set
 \newcommand{\undefset}{\ensuremath{\mathcal{X}}\xspace}
