--- a/Learning/PDDLAlgorithm.tex
+++ b/Learning/PDDLAlgorithm.tex
@@ -1,13 +1,7 @@
 \documentclass[../Master.tex]{subfiles}
 \begin{document}
 
-% In this thesis, the primary focus will be on agents learning PDDL action specifications in a static environment.
-%
-% In such an environment, a number of actions that the agent can perform are available, each accepting a fixed number of objects in the world as parameters. Upon execution of an action in the world, a new world is returned, reflecting the changes made by action execution. The configuration of the world can be observed as a PDDL state. It is assumed that the mechanics of the environment can be specified as a PDDL domain, but that this specification is only partially known (or entirely unknown) to the agent. 
-%
-% When learning a PDDL environment, the \texttt{World} from Algorithm~\ref{algo:science} consists of a PDDL domain as well as a state describing the current configuration of the world.
-
-
+We will now present a formalization of \Cref{algo:science}
 
 Given a PDDL problem, it is then the agent's task to reach the goal specified by the problem by learning the effects and preconditions of the relevant actions. Thus, in this instance the \textit{question} from algorithm~\ref{algo:science} is a PDDL problem, and the $canAnswer$ function consists of checking whether the problem has been solved in the given state (denoted $isSolved$).
 
@@ -17,10 +11,10 @@ In order to test whether the newly constructed hypothesis is sufficient for answ
 
 \begin{algorithm}
     \begin{algorithmic}
-        \Function{$\textsc{conduct}$} {\texttt{Plan} $l$, \texttt{World} $w$, \texttt{Domain} $d_h$}
+        \Function{$\textsc{Conduct}$} {\texttt{Plan} $l$, \texttt{World} $w$, \texttt{Domain} $d_h$}
         \State{$s \gets w.state$}
         \State{$d \gets w.domain$}
-        \ForAll{grounded actions $a \in p$}
+        \ForAll{grounded actions $a \in l$}
             \State{$s' \gets apply(d, s, a)$}
             \State{$s'_{h} \gets apply(d_h, s, a)$}
             \If{$s' \neq s'_h$}
